src/pages/aiAgent/actions/components/ActionEventSidePanel.less
@import (reference) '~css/new/mixins';
@import (reference) '~css/typography';

@drawer-width: 612px;

:local {
    .codeBlock {
        border-radius: 4px;
        min-height: var(--layout-spacing-m);
        border: 1px solid var(--Neutral-Grey_3, #ddd);
        background: var(--Neutral-Grey_1, #f9f9f9);
        padding: calc(var(--layout-spacing-xs) - 2px) var(--layout-spacing-xs);
    }

    .variableCollapsable {
        & > p {
            .body-semibold();
            margin: 0;
            cursor: pointer;
        }

        & > i {
            width: 20px;
            height: 20px;
        }

        .collapsed {
            transform: rotate(90deg);
        }
    }

    .actionStepsContainer {
        display: flex;
        flex-direction: column;
        gap: var(--layout-spacing-xs);
        & > p {
            margin: 0;
            .body-semibold();
        }
        & > div {
            gap: var(--layout-spacing-xs);
        }
    }

    .closeButtonTooltip {
        align-items: baseline;
        display: flex;
        gap: var(--layout-spacing-xs);
    }
}

